--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "nanostores": "^0.7.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-responsive": "^9.0.2",
     "react-router": "^6.9.0",
     "react-router-dom": "^6.9.0",
     "styled-components": "^5.3.9"
